sorted out spacing bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,51 +1,43 @@
 body {
-  display: flex;
+  /* display: flex; */
   background-image: url("./components/assets/gradientBackground.png");
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
   background-attachment: fixed;
-  min-height: 100vh;
+  min-height: 100%;
   min-width: 100%;
-  margin-bottom: 40px;
+  /* margin-bottom: 40px; */
 }
 
-/* html {
-  position: relative;
-  min-height: 100%;
-} */
-
 h1,
-p, h3, h4 {
+p,
+h3,
+h4 {
   color: white;
 }
 
 .navbar {
   margin-top: 5%;
   margin-left: 5%;
+  margin-right: 5%;
 }
 
-/* .header-logo {
-  margin-left: 10%;
-} */
-
 .home-name,
-.home-photo, .contact-pic {
+.home-photo {
   width: 100%;
 }
 
 .home-name {
-  width: 100%;
   margin-top: 12%;
   padding-bottom: 10px;
 }
 
 .contact-pic {
   margin-left: 10%;
+  width: 90%;
 }
-.about-photo {
-  width: 75%;
-}
+
 .about-me {
   font-size: 22px;
   line-height: 1.4;
@@ -69,10 +61,9 @@ p, h3, h4 {
 .nav-link {
   color: white;
   text-decoration: none;
-  font-size:x-large;
+  font-size: x-large;
 }
 
-/* this isn't working */
 .nav-link:active {
   font-weight: bolder;
   color: pink;
@@ -82,6 +73,7 @@ p, h3, h4 {
 .nav-link:hover {
   color: aliceblue;
   font-weight: bolder;
+  background-color: #8a2bf9;
 }
 
 .resume {
@@ -90,24 +82,12 @@ p, h3, h4 {
 }
 
 .home-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 5%;
-  margin-left: 5%;
-}
-.about-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 10%;
-  margin-left: 5%;
-  margin-right: 5%;
+  padding-top: 5%;
 }
 
+
 .contact-container {
-  display: flex;
-  justify-content: center;
-  margin-left: 5%;
-  margin-top: 5%;
+  padding-top: 5%;
 }
 
 .footer-container {
@@ -123,20 +103,6 @@ p, h3, h4 {
   margin-left: 5px;
   padding: 5px;
 }
-
-/* .about-box {
-  padding-top: 8%;
-} */
-/* .card {
-  max-width: 25%;
-  height: fit-content;
-}
-
-.card-body {
-  word-wrap: normal;
-  width: 100%;
-  color: white;
-} */
 
 .project-links {
   color: white;
@@ -183,7 +149,6 @@ p, h3, h4 {
   opacity: 50%;
 }
 
-
 .form-label {
   color: white;
   font-weight: bold;
@@ -194,14 +159,14 @@ p, h3, h4 {
   color: white;
 }
 
-.modal-body {
+/* .modal-body {
   background-color: #8a2bf9;
-}
+} */
 
 footer {
   position: absolute;
   bottom: 0;
   width: 70%;
-  height: 30px;
-  color: #fff; 
+  /* height: 30px; */
+  color: #fff;
 }
